# istrategy

./: .gitignore  README.md
.github/instructions/: base.instructions.md  python.instructions.md  rust.instructions.md  typescript.instructions.md
agents/reasoning_agent/: README.md  README_PROXY.md  advanced_agent_demo.py  agent.py  config.py  demo_advanced_reasoning.py  demo_agent_cycle.py  demo_chromadb_rag.py  demo_production_showcase.py  main.py  ollama_client.py  pyproject.toml  requirements.txt  requirements_advanced.txt  run.py  test_rag_chromadb.py  test_report_20250705_140816.json  test_report_20250705_143625.json  test_together_api.py  test_together_simple.py  together_client.py  tools.py
agents/reasoning_agent/docs/: ADVANCED_TOOLS_FINAL_SUMMARY.md  ADVANCED_TOOLS_ROADMAP.md  PRODUCTION_SETUP_GUIDE.md  README_NEW.md  advanced_tools_development.md  agent_cycle_architecture.md  phase2_plan.md  phase2_progress_summary.md  phase2_summary.md  tool_testing_results.md
agents/reasoning_agent/examples/: advanced_tools_implementation.py  demo_advanced_planning.py  demo_advanced_reasoning.py  demo_agent_cycle.py  example_phase1.py
agents/reasoning_agent/src/: __init__.py  advanced_tools.py  agent.py  autogpt_planner.py  inference_engine.py  main.py  ollama_client.py  prompt_optimizer.py  rag_engine.py  real_tree_of_thought.py  thinking_bridge.py  (+3 more)
docs/: base.instructions.md  new-feature.md  rust.instructions.md  thinking.md  typescript.instructions.md  vscode_ai_fork_guide.md
games/rts_engine/: Cargo.toml  README.md
games/rts_engine/.github/instructions/: rust.instructions.md
games/rts_engine/ai_modules/medic_ai/: Cargo.toml
games/rts_engine/ai_modules/medic_ai/src/: lib.rs
games/rts_engine/ai_modules/scout_ai/: Cargo.toml
games/rts_engine/ai_modules/scout_ai/src/: lib.rs
games/rts_engine/ai_modules/tank_ai/: Cargo.toml
games/rts_engine/ai_modules/tank_ai/src/: lib.rs
games/rts_engine/crates/engine_core/: Cargo.toml
games/rts_engine/crates/engine_core/src/: ai_loader.rs  components.rs  main.rs  systems.rs  ui.rs  utils.rs
games/rts_engine/crates/shared/: Cargo.toml
games/rts_engine/crates/shared/src/: lib.rs
games/rts_engine/crates/tools/ai_builder/: Cargo.toml
games/rts_engine/crates/tools/ai_builder/src/: main.rs
quantrader/: README.md  pyproject.toml
quantrader/examples/: 01_neural_serialization.py  02_neat_evolution.py  03_transformer_trading.py  04_mass_bot_training.py
quantrader/src/quantrader/: __init__.py
quantrader/src/quantrader/core/: __init__.py  base.py
quantrader/src/quantrader/evolution/: __init__.py  neat.py  population.py
quantrader/src/quantrader/models/: __init__.py  genome.py  networks.py
quantrader/src/quantrader/transformers/: __init__.py  models.py
quantrader/src/quantrader/utils/: __init__.py  serialization.py
quantrader/tests/: debug_shapes.py  test_genome_loading.py  test_serialization.py
services/assitant/: .env.example  .gitignore  Dockerfile  PROJECT_README.md  README.md  assistant.db  docker-compose.yml  pyproject.toml
services/assitant/app/: __init__.py  auth.py  chromadb.py  config.py  db.py  embed.py  main.py  mcp.py  pipeline.py  router.py
services/assitant/docs/: command.md
services/assitant/test/: check_db.py  generate_api_key.py  reset_admin_password.py  test_api_protection.py  test_collections.py  test_pipeline.py
services/assitant/ui/: index.html  package.json  pnpm-lock.yaml
services/assitant/ui/src/: App.tsx  index.css
services/assitant/ui/src/components/: Dashboard.tsx  Login.tsx
services/assitant/ui/src/services/: api.ts
services/assitant/ui/src/types/: index.ts
services/chromadb/: .gitignore  docker-compose.yml  pyproject.toml
services/chromadb/src/chromadb-mcp/: embedding.py  main.py  tools.py
services/chromadb/src/chromadb-stdio/: server.py
services/chromadb/test/: server.py  simple_nomic_test.py  test_async_embedding.py  test_nomic_embedding.py
services/neat/: APPLICATIONS.md  index.ts  package-lock.json
services/neat-rust/: Cargo.toml
services/neat-ts/: REAL_WORLD_APPLICATIONS.md  monitoring.db  package.json  production-server.ts
services/ollama/: docker-compose.yml
services/pgrag/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
services/pgrag/app/: config.py  db.py  embed.py  logger.py  main.py
services/pgrag/example/: demo_fastapi_search.py  demo_flask_embed.py  test_fastapi_embed.py
services/pgrag/test/: test_embedding.py  test_flask_embed.py  test_save_vector_pg.py
services/postgres/: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
services/postgres/src/postgres-mcp/: __init__.py  main.py
services/postgres/tests/: __init__.py  test_config.py  test_database.py  test_new_tools.py
services/qdrant/: .gitignore  README.md  docker-compose.yml  pyproject.toml
services/qdrant/src/qdrant_mcp/: main.py
services/qdrant/src/qdrant_mcp/embedding/: __init__.py  schemas.py
services/qdrant/src/qdrant_mcp/embedding/models/: __init__.py  base.py  nomic.py
services/qdrant/src/qdrant_mcp/embedding/pipeline/: __init__.py  text_processor.py
services/qdrant/src/qdrant_mcp/tools/: __init__.py  calculator.py  echo.py  embedding.py  qdrant.py  time.py
services/qdrant/test/: __init__.py  add_vietnamese_data.py  debug_routing.py  explanation.py  run_tests.py  test_embedding_pipeline.py  test_integration_comparison.py  test_law_query.py  test_mcp_client.py  test_mcp_endpoint.py  test_mount_differences.py  test_quick_vietnamese.py  test_vietnamese_embedding.py  test_vietnamese_search.py
services/text-embedding/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/text-embedding/.devcontainer/: devcontainer.json
services/text-embedding/src/text_embed/: __init__.py  main.py
services/text-embedding/src/text_embed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/text-embedding/test/: test_client.py  test_endpoints.py
services/tools-rs/: Cargo.toml  test_sequential.json
services/traefik/: docker-compose.yml
(+53 files in other folders)
