[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantrader"
description = "Advanced Quantitative Trading Framework with Neural Network Evolution"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "QuantTrader Team", email = "dev@quantrader.ai"},
]
keywords = ["trading", "quantitative", "neural-networks", "evolution", "transformers", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "accelerate>=0.20.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiohttp>=3.8.0",
    "asyncio-mqtt>=0.13.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "plotly>=5.15.0",
    "uvicorn>=0.22.0",
    "fastapi>=0.100.0",
    "websockets>=11.0.0",
]
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.22.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",
]
gpu = [
    "torch[cu118]>=2.0.0",
    "nvidia-ml-py>=12.0.0",
]

[project.urls]
Homepage = "https://github.com/quantrader/quantrader"
Documentation = "https://quantrader.readthedocs.io"
Repository = "https://github.com/quantrader/quantrader.git"
Issues = "https://github.com/quantrader/quantrader/issues"

[project.scripts]
quantrader = "quantrader.cli:main"
qt-train = "quantrader.cli:train"
qt-backtest = "quantrader.cli:backtest"
qt-live = "quantrader.cli:live"


[tool.hatch.build.targets.wheel]
packages = ["src/quantrader"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=quantrader",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src/quantrader"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
