[workspace]
resolver = "2"
members = [
    "crates/engine_core",
    "crates/shared",
    "crates/tools/ai_builder",
    "ai_modules/tank_ai",
    "ai_modules/scout_ai",
    "ai_modules/medic_ai",
]

[workspace.dependencies]
bevy = "0.16"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
libloading = "0.8"
notify = "6.0"
clap = { version = "4.0", features = ["derive"] }
fastrand = "2.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
