[project]
name = "qdrant-mcp"
version = "0.1.0"
description = "Qdrant MCP server với endpoint duy nhất /mcp"
authors = [
    {"name" = "Your Name", "email" = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard]",
    "mcp",
    "qdrant-client",
    "sentence-transformers",
    "pydantic",
    "einops"
]

[tool.setuptools]
packages = ["src.qdrant_mcp"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
