[package]
name = "engine_core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rts_engine"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true, features = [
    "default",
    "dynamic_linking"
] }
shared = { path = "../shared" }
anyhow = { workspace = true }
libloading = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
log = "0.4"
env_logger = "0.10"
fastrand = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
